--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -156,7 +156,7 @@
   justify-content: space-between;
   gap: 16px;
   margin-bottom: 18px;
-  padding: 0px 16px;
+  // padding: 0px 16px;
 }
 
 .sectionTitle {
